--- a/src/easy/bin/.gitignore
+++ b/src/easy/bin/.gitignore
@@ -1,26 +1,3 @@
-/.classpath
-/.project
-/DoNotTerminate$ExitTrappedException.class
-/DoNotTerminate.class
+/AdvancedArithmetic$JavaInterface.class
 /JavaInterface.class
-/JavaLoops2.class
-/JavaOutputFormatting.class
-/JavaStdinAndStdout2.class
-/JavaStringCompare.class
-/JavaStringTokens.class
-/PatternSintaxChecker.class
-/Result.class
-/Teste.class
-/javaCurrencyFormatter.class
-/javaDataTypes.class
-/javaDateAndTime.class
-/javaEndOfFile.class
-/javaIntToString.class
-/javaLambdaExpressions.class
-/javaList.class
-/javaStaticInitializerBlock.class
-/javaStringsIntroduction.class
-/javaSubstring.class
-/AdvancedArithmetic.class
-/MyCalculator$JavaInterface.class
 /MyCalculator.class
