--- a/src/easy/bin/.gitignore
+++ b/src/easy/bin/.gitignore
@@ -1,3 +1,8 @@
 /AdvancedArithmetic$JavaInterface.class
 /JavaInterface.class
 /MyCalculator.class
+/JavaPrimalityTest.class
+/UsernameValidator.class
+/ValidUsernameChecker.class
+/isPrime$JavaPrimalityTest.class
+/isPrime.class
