--- a/src/easy/bin/.gitignore
+++ b/src/easy/bin/.gitignore
@@ -1,8 +1,30 @@
-/AdvancedArithmetic$JavaInterface.class
+/.classpath
+/.project
+/JavaLoops2.class
+/AdvancedArithmetic.class
+/DoNotTerminate$ExitTrappedException.class
+/DoNotTerminate.class
 /JavaInterface.class
-/MyCalculator.class
+/JavaOutputFormatting.class
 /JavaPrimalityTest.class
+/JavaStdinAndStdout2.class
+/JavaStringCompare.class
+/JavaStringTokens.class
+/MyCalculator.class
+/PatternSintaxChecker.class
+/Result.class
+/Teste.class
 /UsernameValidator.class
 /ValidUsernameChecker.class
-/isPrime$JavaPrimalityTest.class
-/isPrime.class
+/javaBigInteger.class
+/javaCurrencyFormatter.class
+/javaDataTypes.class
+/javaDateAndTime.class
+/javaEndOfFile.class
+/javaIntToString.class
+/javaLambdaExpressions.class
+/javaList.class
+/javaStaticInitializerBlock.class
+/javaStringsIntroduction.class
+/javaSubstring.class
+/JavaArrayList.class
