--- a/src/easy/bin/.gitignore
+++ b/src/easy/bin/.gitignore
@@ -28,3 +28,10 @@
 /javaStringsIntroduction.class
 /javaSubstring.class
 /JavaArrayList.class
+/JavaFactoryPattern.class
+/Cake.class
+/Do_Not_Terminate$ExitTrappedException.class
+/Do_Not_Terminate.class
+/Food.class
+/FoodFactory.class
+/Pizza.class
